done create hotel , edit , delete

--- a/PPl3/Areas/Host/Views/HomeHost/Listing.cshtml
+++ b/PPl3/Areas/Host/Views/HomeHost/Listing.cshtml
@@ -29,7 +29,7 @@
                         <i class="fa-brands fa-think-peaks" style="color: #ff385c;"></i>
                     </div>
 
-                    <div class="list_header">
+                    @*<div class="list_header">
                         <ul class="nav">
                             <li class="today_btn">Today</li>
                             <li class="calendar_btn">Calendar</li>
@@ -48,7 +48,7 @@
                                 </ul>
                             </li>
                         </ul>
-                    </div>
+                    </div>*@
 
                     <div class="nav_menu">
                         <div class="alert_icon">
@@ -91,7 +91,7 @@
             <div class="gird wide">
                 <div class="row no-gutter content_container">
                     <div class="col l-12 m-12 c-12">
-                        <div class="page_listing">
+                        <div class="page_listing open">
                             <div class="col l-12 m-12 c-12 tool_listing">
                                 <div class="tittle">
                                     <h1>Your listing</h1>
@@ -259,7 +259,7 @@
             </div>
         </div>
     </div>
-    <script src="~/ExtraFiles/JS/Listing.js"></script>
+    <script src="~/ExtraFiles/JS/Listing.js?v=1"></script>
     <script src="~/ExtraFiles/JS/menuGuest.js?v=1"></script>
 
 </body>
