--- a/PPl3/Areas/Host/Views/HomeHost/editHotel.cshtml
+++ b/PPl3/Areas/Host/Views/HomeHost/editHotel.cshtml
@@ -24,8 +24,8 @@
                             <div class="logo">
                                 <a href="/host/homehost/listing"><i class="fa-brands fa-think-peaks" style="color: red"></i></a>
                             </div>
-                            <div class="save_btn" onclick="EditData('@Model.id')">
-                                <button>Save & Exit</button>
+                            <div class="save_btn" >
+                                <button onclick="EditData('@Model.id')">Save & Exit</button>
                             </div>
                         </div>
                     </div>
@@ -809,7 +809,7 @@
     <script>
         var index = parseInt('@Model.current_pages');
     </script>
-    <script src="~/ExtraFiles/JS/hotel.js?v=11"></script>
+    <script src="~/ExtraFiles/JS/hotel.js?v=12"></script>
 </body>
 </html>
 
@@ -850,8 +850,6 @@
     
     function getData() {
         $(document).ready(function () {
-
-            console.log(data);
             // pages 2
             var get_property_type = $('.list_place .place_item .selected');
             if (get_property_type.length > 0) {
@@ -1034,6 +1032,7 @@
 
     function EditData(id) {
         getData();
+        console.log(data);
         $(document).ready(function () {
             
 
